@startuml
'https://plantuml.com/class-diagram

abstract Computer{
    # String mainboard, cpu, ram, storage, screen
    # int vMainboard, vCPU, vRAM, vStorage, vScreen
    + {abstract} String build()
    + {abstract}int value()
}
abstract PCDecorator


Computer <|---- ConcretePC
Computer <|---- PCDecorator
PCDecorator <|--- ScreenReplace
PCDecorator <|--- CPUReplace
PCDecorator <|--- RAMUpdate
PCDecorator <|--- StorageUpdate
PCDecorator ----> Computer:pc

@enduml